--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
+<!DOCTYPE html>
+<html lang="en">
+  
+  <head>
+    <title>Joseph's D&D Guide</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
+  
+  <body>
+    <!-- Header -->
+    <header>
+      <h1>
+        It's Dangerous out there...
+      </h1>
+      <p>
+        Take one of these before you leave.
+      </p>
+    </header>
 
+    <!-- Navbar -->
+    <nav>
+      <a href="#">Dice</a>
+      <a href="#">Maps</a>
+      <a href="#">Character sheets and items</a>
+      <a href="#">Scrolls and Books</a>
+      <a href="#">Mini-MEs</a>
+      <a href="#">Fate Towers</a>
+    </nav>
+
+    <!-- Body -->
+    <main>
+      <!-- Sidebar -->
+      <aside>
+        <h2>Tips, Tricks, and Lessons</h2>
+        <li>How to kill your players</li>
+        <li>How to roleplay your characters</li>
+        <li>Homebrewed items</li>
+        <li>How to build a Campaign</li>
+      </aside>
+      
+      <!-- Main page items -->
+      <!-- 
+--------------------------------------------------------------------
+      !This section is for demonstration only!
+      <div class="products">
+        </section>
+        <section class="card-B">
+          <header>Wooden Spoons</header>
+          <img
+            src="./assets/images/wooden-spoons.jpg"
+            alt="4 wooden spoons with different seasonings"
+          />
+          <p>Time to learn: 10mins</p>
+        </section>
+      </div>
+---------------------------------------------------------------------
+      -->
+      
+    </main>
+
+    <!-- Footer -->
+    <footer>
+      <h3>
+        "In this world you're at your weakest alone, so never split the party."  Tu'ul, son of Horuk.
+      </h3>
+    </footer>
+  </body>
+</html>
